doc, tolist, take while